Last commit was major navigation improvement for mobile. This fix is minor spacing fix.

--- a/resources/css/sidenav.pcss
+++ b/resources/css/sidenav.pcss
@@ -2,7 +2,7 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    gap: var(--gap-3);
+    gap: var(--gap-1);
 
     @media only screen and (min-width: 992px) {
         flex-direction: column;
